--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Markov Madness</title>
+    <title>Responsive NCAA Bracket</title>
     <meta charset="utf-8">
     <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic" rel="stylesheet" type="text/css">
     <link href="bracket.css" rel="stylesheet" type="text/css">
