--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Responsive NCAA Bracket</title>
     <meta charset="utf-8">
     <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic" rel="stylesheet" type="text/css">
-    <link href="bracket.css" rel="stylesheet" type="text/css">
+    <link href="bracket.less" rel="stylesheet/less" type="text/css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/1.6.3/less.min.js"></script>
   </head>
   <body>
     <div class="round">
